Paths for board and tasks was edited and boardId was added to BoardConfig
